test/fails/bad_casts/as3.lgl
void main() {
    vec4 v = [1., 2., 3., 4.];
    vec4 fail = v as vec3; // should be 'as vec4'
}